--- a/Inventory.csproj
+++ b/Inventory.csproj
@@ -80,6 +80,7 @@
      <Compile Include="Assets\Scripts\Interface\Trade\TradeOpenSell.cs" />
      <Compile Include="Assets\Scripts\Interface\Trade\TradeMakeSell.cs" />
      <Compile Include="Assets\Scripts\Interface\Trade\TradeContinueSell.cs" />
+     <Compile Include="Assets\Scripts\Interface\House\TalkClose.cs" />
      <None Include="Assets\Scripts\Interface\Inventory.asmdef" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.19f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
